# ZeroKnowledgeCompress

./: Cargo.toml
compression/: Cargo.toml
compression/src/: lib.rs  tests.rs  utils.rs
cryptography/: Cargo.toml
cryptography/src/: main.rs  main_circuit.rs  utils.rs
